[package]
name = "feat_extr"
version = "0.3.0"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
light-curve-interpol = "0.1.1"
light-curve-common = "0.1.1"
fallible-iterator = "^0.2.0"
num-traits = "^0.2.0"
num-derive = "^0.2.0"
conv = "^0.3.2"
clap = "^2.33"
itertools = "^0.8.0"
num_cpus = "^1.10"
crossbeam = "^0.7.3"
futures-util = "^0.3.0"
async-std = "^1.4.0"
md5 = "^0.7.0"
hdf5 = "^0.7.0"
ndarray = "^0.13"
dyn-clonable = "^0.9"
base64 = "^0.12.2"

[dependencies.light-curve-feature]
version = "0.2.0"
#default-features = false
#features = ["fftw-mkl"]

[dependencies.clickhouse-rs]
git="https://github.com/suharev7/clickhouse-rs/"
rev="6c822edcdaff950e28cfdbad0628708e2da57113"
# branch="async-await"
default-features = false
features = ["async_std"]

# [dependencies.hdf5-sys]
# version = "^0.7.0"
# default-features = false
# features = ["static"]

[dev-dependencies]
rand = "0.7"

[lib]
name = "feat_extr"
path = "src/lib.rs"

[[bin]]
name = "feat_extr"
path = "src/bin/main.rs"
