[package]
name = "feat_extr"
version = "0.3.1"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["fftw-system", "hdf"]
fftw-system = ["light-curve-feature/fftw-system"]
fftw-mkl = ["light-curve-feature/fftw-mkl"]
hdf = ["hdf5"]

[dependencies]
light-curve-common = "0.1.1"
light-curve-interpol = "0.1.1"
light-curve-feature = { version = "0.5.5", default-features = false }
num-traits = "0.2.15"
num-derive = "0.3.3"
conv = "0.3.2"
clap = "^2.34"
itertools = "0.10.5"
num_cpus = "1.10"
crossbeam = "0.8.2"
futures-util = "0.3.0"
async-std = "1.4.0"
md5 = "0.7.0"
#hdf5 = { version = "0.8.1", optional = true }
# hdf5 0.14 support:
hdf5 = { git = "https://github.com/aldanor/hdf5-rust", optional = true, rev = "26046fb4900ec38afd2a1c0494cff688b288662e" }
dyn-clonable = "0.9"
base64 = "0.21.2"

[dependencies.clickhouse-rs]
git="https://github.com/suharev7/clickhouse-rs/"
rev="ecf28f46774773f39c74ee5213ad1e3ea240739b"
#version = "1.0.0-alpha.1"
default-features = false
features = ["async_std"]

[dev-dependencies]
rand = "0.7"

[lib]
name = "feat_extr"
path = "src/lib.rs"

[[bin]]
name = "feat_extr"
path = "src/bin/main.rs"
